--- a/Et_blauwe_klokkien.mw
+++ b/Et_blauwe_klokkien.mw
@@ -14,7 +14,7 @@ Et blauwe klokkien is een gastheer veur et [[gentiaanblauwgien]] (''Maculinea al
 
 ==Nedersaksisch==
 *[[Stellingwarfs]]: 
-**''et blauwe klokkien
+**''et blauwe klokkien''
 **''klokheide''
 **''adam-en-eva''
 **''reumeltien''
@@ -35,6 +35,5 @@ Et blauwe klokkien is een gastheer veur et [[gentiaanblauwgien]] (''Maculinea al
 
 {{Commons|Gentiana pneumonanthe}}
 
-{{DEFAULTSORT:Et Blauwe Klokkien}}
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Plaante]]
