--- a/Ko.mw
+++ b/Ko.mw
@@ -19,7 +19,7 @@ De vrouwelijke ko hef een [[geer]] waormee ze nao de geboorte van een [[kuusjen|
 *[[Drèents]]:
 **''beest'', ''beist'', ''biest''
 ***''biestevleis'' = vleis van de koe ([[ZWZ]])
-**''koe'' (meervold: ''koenen'')''
+**''koe'' (meervold: ''koenen'')
 **''ko''
 **''koou''
 **''kou''
