--- a/Kurów.mw
+++ b/Kurów.mw
@@ -1,33 +1,33 @@
-{{Zie dv|Veur de lieknoamege ploats in [[Nij Zeelaand]] zai: [[Kurow (Nij Zeelaand)]]''.}}
+{{Zie dv|Veur de lieknoamege ploats in [[Nij Zeelaand]] zai: [[Kurow (Nij Zeelaand)]].}}
 {| {{prettytable}} align="right" width="100px"
-|-----
+|-
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" style="background:#ffffff;" cellpadding="2" cellspacing="0"
-|-----
+|-
 | [[Ofbeelding:Herb Kurowa.png|140px|Waopen]]
 | [[Ofbeelding:KurówPoland.png|140px|Ligging]]
 |}
-|-----
+|-
 | align="center" colspan="2" style="border-bottom:3px solid gray; font-size:larger" | '''Kurów'''
-|-----
+|-
 | [[Woiwodschap]] || [[Lubelskie]]
-|----
+|-
 | [[Powiat]] || [[Powiat Puławski|Powiat puławski]]
-|-----
+|-
 | Oppervlak
 | 11,3 km²
-|-----
+|-
 | Inwoners<br /> - [[Bevolkingsdichheid|Dichtheid]]
 | 2.811 ([[2005]])<br /> 248/km²
-|----
+|-
 | Verlening van <br />&nbsp; stadsrechten
 | valign=top | <br />[[1442]] - [[1870]]
-|----
+|-
 | Breedtegraod<br />Lengtegraod
 | 51°23' N<br />22°11' E
-|-----
+|-
 | [[Netnummer]] || (+48) 81
-|-----
+|-
 | [[Internet|Webstee]] || [http://www.kurow.lubelskie.pl Gmina Kurów]
 |}
 '''Kurów''' is een stadtien in [[Pooln|Zuudoost-Polen]] in 't [[Woiwodschap]] [[Lubelskie]]. Kurów ligt tussen [[Puławy]] en [[Lublin]] an de rivier de [[Kurówka]]. t Is de heufdstad van n apaarte [[gmina]], n soort gemainte, binnen t [[Lublin Woiwodschap]] en het 2782 ienwoner (gegevens oet [[2005]]).
@@ -44,10 +44,9 @@ Op [[9 septimber]], [[1939]], tiedens de [[Poolse Kampanje]], wat de noam is van
 Vernuimde toeristische attraksies binnen de [[Renaissance]] kìrke (herbaauwd ien [[1692]]) mit t gaf van de Zbąski femilie en beelden deur [[Santi Gucci]] ([[1587]]). Kurów is ook bekind as t boortestee van generoal [[Wojciech Jaruzelski]].
 
 == Boetede hinwiezen ==
-* [http://kurow-wiki.openhosting.pl Wiki over Kurów]
+* [http://kurow-wiki.openhosting.pl/ Wiki over Kurów]
 
 {{Commons|Kurów}}
 
-{{DEFAULTSORT:Kurow}}
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Plaotse in Pooln]]
