--- a/Fietse.mw
+++ b/Fietse.mw
@@ -24,8 +24,8 @@ Beron [[Karl von Drais]] bedöch een zogenaamde ''loopfietse''. Disse bestung uu
 * [[Veluws]]: ''fiets{{small()|e}}''
 
 == Citaot ==
-:''Ik trap de fietse deur 't buulzand hen op 'n zandpad langs de Duutse grens.
-:''Ik denk da'k dalijk even kieken gao in 't buutenland.
+:''Ik trap de fietse deur 't buulzand hen op 'n zandpad langs de Duutse grens.''
+:''Ik denk da'k dalijk even kieken gao in 't buutenland.''
 
 Drèents citaot; uut ''[[Op fietse]]'', op ''Niks is zoas 't lek'' (1997) van [[Skik]]
 
