--- a/Waoterfoks.mw
+++ b/Waoterfoks.mw
@@ -8,7 +8,7 @@ De waoterfoks komt van oorsprong veur in de baargen in [[tropen|tropisch]] [[Afr
 ==Nedersaksisch==
 *[[Veluws]]: 
 **''waoterfoks''
-**''waoterplaant(e), waoterplant(e)
+**''waoterplaant(e), waoterplant(e)''
 **''waoterplaantjen'', ''waoterplaantien''
 **''waoterplantjen'' ''waoterplantien''
 
