--- a/Johan_Gigengack.mw
+++ b/Johan_Gigengack.mw
@@ -12,7 +12,7 @@ Gigengack hopten de strekskriewerieje radikaal te verniejen duur an te sloeten o
 
 t Is bekeand det zin blad um allens was. Hee dee allens zelf. Redaksie, t Zetten, t drukken. Hee har mangs nen kroam in t hoes, van stapels drukwoark det nog evoolden mos worden.
 
-Duur ''Elseviers Weekblad'' wör zin book vergelekken met t book ''Fabriek'' van n [[Freeslaand|Freesk]] [[Trinus Riemersma]] en ''De Metsiers'' van [[Hugo Claus]]. Der wör van ezegd det "de intimiteit van dialectliteratuur verstoord werd door gedachten en begrippen die in een groot taal- en denkgebied thuishoren''.
+Duur ''Elseviers Weekblad'' wör zin book vergelekken met t book ''Fabriek'' van n [[Freeslaand|Freesk]] [[Trinus Riemersma]] en ''De Metsiers'' van [[Hugo Claus]]. Der wör van ezegd det "de intimiteit van dialectliteratuur verstoord werd door gedachten en begrippen die in een groot taal- en denkgebied thuishoren.
 
 Noa zin ofskeaid van t Tweants leut Gigengack zik in met Hengelse keunstenoaren, woermet he zochen noar ne depere beleawing, wat um oeteaindelik nit lukten. In t Neerlaands skreef hee doar oawer in zien beuken ''De trap der vergezichten'' (1971).
 
@@ -30,7 +30,7 @@ Hee kon t toch nit loaten en köm wier bie de Tweantse sproakebeweaging bie. Hee
 *''Twentse Post'' (1961 töt 1976)
 
 ==Uutgoande verwiezingen==
-[http://johan.gigengack.nl Leven en werk van de schrijver Johan Gigengack uit Hengelo]
+[http://johan.gigengack.nl/ Leven en werk van de schrijver Johan Gigengack uit Hengelo]
 
 {{Bron|<references/>}}
 
