--- a/Klaasje_Rotstein-van_den_Brink.mw
+++ b/Klaasje_Rotstein-van_den_Brink.mw
@@ -33,7 +33,7 @@ In oktober 2009 meuk de gemiente Kampen bekend det d'r in Zalk een Klaasje van d
 *[http://www.trouw.nl/krantenarchief/1997/06/06/2533584/Kruidenvrouw_Klazien_uit_Zalk_78__overleden.html Trouw: ''Kruidenvrouw Klazien uit Zalk (78) overleden'']
 *[http://www.robertpaul.nl/ Webstee van stemkeunstenaor Robert Paul]
 *[http://www.nd.nl/artikelen/2009/oktober/20/-klazien-uut-zalk-verdient-geen-straat- Nederlands Dagblad: '' 'Klazien uut Zalk verdient geen straat' '']
-*[http://www.rtvoost.nl/nieuws/default.aspx?nid=102714 RTV Oost: ''"Geen straat voor Klazien uut Zalk"]
+*[http://www.rtvoost.nl/nieuws/default.aspx?nid=102714 RTV Oost: ''"Geen straat voor Klazien uut Zalk"'']
 *Renckens, Cees (2004), ''Dwaalwegen in de geneeskunde. Over alternatieve geneeswijzen, modeziekten en kwakzalverij'', Amsterdam: Bert Bakker, blz. 328
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
