--- a/Thomas_Berge.mw
+++ b/Thomas_Berge.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Thomas berge.jpg|thumb|right|200px|Thomas Berge (2007)]]
+[[Ofbeelding:Thomas berge.jpg|thumb|200px|Thomas Berge (2007)]]
 '''Thomas Berge''' (echten naam ''Chiel Ottink'', [[Eanske]] [[25 jannewaori|25 jannuwoari]] [[1990]]) is nen zänger oet [[Hoksebarge]] in [[Tweante]], den in t [[Neerlaands]] zingen dut. 
 
 ==Loopbaan==
@@ -63,45 +63,45 @@ Augustus 2010 leut Berge zik opnemn in nen ofkickhoes umdet he regelmoatig met d
 ! Hoogste <br /> positie
 ! Antal <br /> wekken
 ! Opmerkingen
-|- align=center
+|-
 |align=left|''Mijn luchtballon''||2003||-|||||| 800.000 van verkocht / #24 in [[Single Top 100|de Single Top 100]]
-|- align=center
+|-
 |align=left|''Als jij alles kon overdoen''||2003||-|||||| #34 in de Single Top 100
-|- align=center
+|-
 |align=left|''Een glimlach''||2004||-|||||| #36 in de Single Top 100
-|- align=center
+|-
 |align=left|''Als jij lacht''||2005||-|||||| #46 in de Single Top 100
-|- align=center
+|-
 |align=left|''Ik zie mijn leven als een melodie''||2005||-|||||| #26 in de Single Top 100
-|- align=center
+|-
 |align=left|''De mooiste''||2005||-|||||| #45 in de Single Top 100
-|- align=center
+|-
 |align=left|''Als een mooie droom''||2005||-|||||| #54 in de Single Top 100
-|- align=center
+|-
 |align=left|''Jantjes gitaar''||2005||-|||||| met [[Johnny Hoes]] / #68 in de Single Top 100
-|- align=center
+|-
 |align=left|''Val aan''||2006||-|||||| #68 in de Single Top 100
-|- align=center
+|-
 |align=left|''Bellen''||2006||-|||||| #68 in de Single Top 100
-|- align=center
-|align=left|''Jij bent mijn leven||2006||-|||||| #68 in de Single Top 100
-|- align=center
+|-
+|align=left|''Jij bent mijn leven''||2006||-|||||| #68 in de Single Top 100
+|-
 |align=left|''Heel even''||2007||-|||||| #71 in de Single Top 100
-|- align=center
+|-
 |align=left|''De wereld ben jij''||2007||14-07-2007||tip5||-|| [[Soundtrack]] [[Zoop in Zuid-Amerika]] / #35 in de Single Top 100
-|- align=center
+|-
 |align=left|''De stem van mijn hart''||2007||06-10-2007||tip2||-|| met [[Tess Gaerthé|Tess]] / Soundtrack [[High School Musical 2]] / #45 in de Single Top 100
-|- align=center
+|-
 |align=left|''Niet meer en niet minder''||2008||-|||||| #48 in de Single Top 100
-|- align=center
+|-
 |align=left|''Zonder jou''||2008||12-07-2008||tip6||-|| #10 in de Single Top 100
-|- align=center
+|-
 |align=left|''Ieder moment''||2009||25-07-2009||tip9||-|| #4 in de Single Top 100
-|- align=center
+|-
 |align=left|''Kon ik maar even bij je zijn''||09-10-2009||-|||||| #1 in de Single Top 100 / [[Goud (muziek)| Goud]]
-|- align=center
+|-
 |align=left|''Geen kerstfeest zonder jou''||12-2009||-|||||| #1 in de Single Top 100
-|- align=center
+|-
 |align=left|''Ik vertrouw je niet meer''||02-2010|||||||| #10 in de Single Top 100
 |}
 
