*Empty MediaWiki Message*

--- a/Máxima_Zorreguieta.mw
+++ b/Máxima_Zorreguieta.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Máxima Zorreguieta.jpg|250px|thumb|Konegin Máxima van Nederland]]
+[[Bestaand:Celine Correia.jpg|250px|thumb|Konegin Máxima van Nederland]]
 '''Máxima Zorreguieta''' (geboren in [[Buenos Aires (stad)|Buenos Aires]], [[Argentinië]], op [[17 mei]] [[1971]]) is Prinses der Nederlanden, Prinses van Oranje-Nassau en is de vrouw van [[koning]] [[Willem-Alexander van de Nedderlanden|Willem-Alexander van Oranje]]. Ze is [[rooms-katholiek]], van [[Argentinië|Argentiense]] ofkomst en het de [[Nederland|Nederlandse]] en Argentiense nasionaliteit. Máxima draagt as echtgenote van t staotsheufd de titel van prinses der Nederlanden. Ze wort konigin eneumd, disse titel is offisieus en niet in n wet vasteleid. Heur anspreektitel is ''majesteit''. Samen mit koning Willem-Alexander het ze drie derens, [[Catharina-Amalia van Nederlaand|Amalia]] (2003), [[Alexia van Nederlaand|Alexia]] (2005) en [[Ariane van Nederlaand|Ariane]] (2007).
 
 == Levensloop ==
