*Empty MediaWiki Message*

--- a/Uui.mw
+++ b/Uui.mw
@@ -13,7 +13,7 @@ De '''uui''' ([[Latien]]: ''Allium cepa'') is een bolgewas dat tegesworig overal
 ** ''look'' 
 * [[Grunnegs]]: ''siepel''
 * [[Drèents]]: ''siepel''
-* [[Sallaans]]: ''siepel''
+* [[Sallaans]]: ''siepel'', ''look'' (westelik)
 * [[Stellingwarfs]]: ''siepel''
 * [[Tweants]]: ''siepel''
 * [[Veluws]]: 
