*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -26,7 +26,7 @@
 ***[[West-Germaans]]  
 ****[[Nederduuts]]
 ****[[Nedersaksisch]] 
-*****[[Nederlaands-Nedersaksisch]]
+*****[[Westfaals]]
 ******[[Gelders-Oaveriessels]]
 *******Sallaands
 |-
