*Empty MediaWiki Message*

--- a/Gelders-Oaveriessels.mw
+++ b/Gelders-Oaveriessels.mw
@@ -1,4 +1,4 @@
-'''Gelders-Oaveriessels''' is een [[Nedersaksisch]]e dialectgroep die espreuken wördt rond de revier de [[Iessel]]. De groep kan in 3 subgroepen verdeeld wörden: [[Sallaans]], [[Achterhooks|Achterhoeks]] en [[Urkers]]. Soms wordt 't [[Oost-Veluws]] hier ok biej erekend.
+'''Gelders-Oaveriessels''' is een [[Nedersaksisch]]e dialectgroep die espreuken wördt rond de revier de [[Iessel]]. De groep kan in 3 subgroepen verdeeld wörden: [[Sallaans]], [[Achterhooks|Achterhoeks]] en [[Urkers]]. Mangs wordt 't [[Oost-Veluws]] hier ok biej erekend.
 
 In 't noordoosten van [[Deutekem]] begint 't Gelders-Oaveriessels, dät zich vortzet oaver de Iessel, zoas de name al zegt, in de [[Nederlaand]]se pervinsie [[Oaveriessel]]. Nog meer naor 't oosten vienen we 't [[Tweants-Groafschops|Twents-Graofskops]]. De grens mit 't Gelders-Oaveriessels wördt evormd deur de uutspraok van 't woord ''vuur'': in 't Gelders-Oaveriessels ''vuur'', in 't Twents-Graofskops ''veur''. In beide gebieden, Gelders-Oaveriessels en Twents-Graafskops, loopt 't dialectgebied deur oaver de pervinsiegrens mit Oaveriessel. Der loopt dus wel een dialectgrens deur de [[Achterhook|Achterhoek]], mar niet tussen Achterhoek en [[Tweante|Twente]].
 
