--- a/Kateker.mw
+++ b/Kateker.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Eekhoorn.jpg|thumb|right|250px|n Griezn boomleuper (S. carolinensis)]]
+[[Ofbeelding:Eekhoorn.jpg|thumb|250px|n Griezn boomleuper (S. carolinensis)]]
 '''Katekers''' (''Sciuridae'') bint ne familie van [[knaagdeers]] dee 51 geslachtn en 278 soortn keant. Doarvan komt der mer elf vuur in [[Uropa]]. Bekeande geslachtn bint de [[boomleupers]], (''Sciurus''), de [[marmotn]] (''Marmota'') en de prearieheunde (''Cynomys'').
 
 In Uropa is n [[rooin boomleuper|roodn boomleuper]] (''S. vulgaris'') t meest bekeand. In [[Noord-Amerika]] komt ok eankelde soortn vuur, woaroonder n [[griezn boomleuper]] (''S. carolinensis'') n belangriekstn is. Disn boomleuper is ok invoerd in [[Verienigd Keuninkriek|et Verenigd Keuninkriek]] en [[Italiën]] en hef doar as eksoot n inheemsn, völ schuchterign roodn boomleuper meestparts verdrongn. Katekers bint meesttieds oaverdag aktief, mer [[vleagnde katekers]] bint nachtdeers. Disse letste soort kömp vuur in t noordn van [[Finlaand]] en [[Roslaand|Ruslaand]].
@@ -20,7 +20,7 @@ Katekers hebt meesttieds n laank, roond lief met nen langn pluumstart. Zee könt
 ** ''eekhoorne'' ([[Une]], [[Vaossen]], [[Apeldoorne (stad)|Apeldoorne]])
 ** ''eekheurn'' ([[Wezep]])
 ** ''ekeltjen'' ([[Nunspeet]])
-** ''eker'', ekertie{{small()|n}}''
+** ''eker'', ''ekertie{{small()|n}}''
 ** ''eikertien'' ([[Waopenvelde]])
 ** ''iekertien'' ([[Heerde]])
 ** ''kateker'' ([[Apeldoorne (stad)|Apeldoorne]])
