--- a/Oldlusen.mw
+++ b/Oldlusen.mw
@@ -6,12 +6,14 @@ Op Oldlusen praot ze naost [[Nederlaans]] ok [[Sallaans]].<ref name="Scholtmeije
 Oldlusen is begund as Lusen; de name wördden verschillend op-eschreven: Lusne (1313), Loesen (1322), Luessen (1485). Ze mient det de name kömp van ''lo-essen'' (=holt-essen). In 1631 wördden de [[Luessener Compagnie]] op-ericht um 't gebied boaven Lusen te ontginnen. Daor ontstund [[Ni'jlusen]], en zo wördden Lusen Oldlusen enuumd.
 
 ==Citaot==
-:''"Goa'j met hen schaats'n?" vreug mi'j Hans.
-:''Ik dache: "Joa, det is mien kans
-:''um is te win'n."
-:''Schaats'n lopen is mien vak.
-:''Ik peutie-oaver met gemak.
-:'' 't Zal hum niet zin'n.''
+<poem style="margin-left:1.5em; font-style:italic">
+"Goa'j met hen schaats'n?" vreug mi'j Hans.
+Ik dache: "Joa, det is mien kans
+um is te win'n."
+Schaats'n lopen is mien vak.
+Ik peutie-oaver met gemak.
+'t Zal hum niet zin'n.
+</poem>
 
 Eerste strofe van ''Oldluus'n - Gelster'' deur Irene van Oenen. In: Arend Heideman (samenst.) (2001?), ''Kot tegen moder de gaanze an'', Stichting Genootschap voor Gelselaar en de Ganzenveer
 
