--- a/Anne_van_der_Meiden.mw
+++ b/Anne_van_der_Meiden.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:AnnevanderMeiden14082007.jpg|thumb|rechts|250px|Anne van der Meiden]]
+[[Ofbeelding:AnnevanderMeiden14082007.jpg|thumb|250px|Anne van der Meiden]]
 
-'''Anne van der Meiden''' ([[Eanske]], [[4 juni]] [[1929|1929]]- [[Nijverdal]], [[3 juni]] [[2021 | 2021]]) is nen [[Tweante|Tweantsen]] [[domie]] en [[kommunikasiewetenskop]]per. An de vrogere [[Rieksuniversiteit van Utrecht]] was'e hoogleraar in massakommunikasie en Publieke Relasies. Rechtevoort is'e vuural bekeand van de koarkdeenstn dee at'e in t [[Tweants]] dut, en zinnen [[Tweantsen Biebel]].
+'''Anne van der Meiden''' ([[Eanske]], [[4 juni]] [[1929]] - [[Nijverdal]], [[3 juni]] [[2021]]) is nen [[Tweante|Tweantsen]] [[domie]] en [[kommunikasiewetenskop]]per. An de vrogere [[Rieksuniversiteit van Utrecht]] was'e hoogleraar in massakommunikasie en Publieke Relasies. Rechtevoort is'e vuural bekeand van de koarkdeenstn dee at'e in t [[Tweants]] dut, en zinnen [[Tweantsen Biebel]].
 
 ==Achtergroond==
 Hee wör geboorn in n [[protestant|Kristelik-Gerefformeerd]] gezin. Noa t gymnasium in Eanske studeerdn'e [[godgeleardheaid]]. Doarnoa wör'e domie in de protestaantse koarke van [[Meerkerk]]. Doarnöast studeerdn'e marketing en kommunikasiewetenskopn (anpriezen en boskopn oawerbrengn). In [[1972]] promoveerdn'e op ethiek in de propaganda van t [[vakgebeed]] wiesbegearige ethiek. hee hef op verskeaidene hogeskooln oonderwies egeewn, woeroonder ook an [[Monique Sleiderink]]. In [[1994]] gung'e met [[emiroat]].
@@ -12,7 +12,7 @@ Hee skreef völle beuke oawer geloof, [[reklame]], [[propaganda]], köjern vuur 
 Van der Meiden hef 52 biebelbeuke umme ezat in t Tweants. Hee hef vennear nog loatn weetn det'e doarmet mut stopn, umdet'e t allemoal nit good mear zeen kan. Ook leaidt'e regelmoatig koarkdeenstn in t Tweants. In 2012 vertaaln hee n Oaldsaksischen heldendoad [[Heliand]].
 
 ==Oetgoande verbeendige==
-*[http://www.annevandermeiden.nl www.annevandermeiden.nl webstea van umzelf]
+*[http://www.annevandermeiden.nl/ www.annevandermeiden.nl webstea van umzelf]
 
 {{DEFAULTSORT:Meiden, Anne Van Der}}
 [[Kategorie:Tweants artikel]]
