([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Fat.png]] → [[File:Generic triglyceride molecule (wireframe diagram).png]] old name is not particularly meaningful

--- a/Vet.mw
+++ b/Vet.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Fat.png|thumb|right|De algemeane [[structuurformule]] van ne [[triglyceride]].]]
+[[Ofbeelding:Generic triglyceride molecule (wireframe diagram).png|thumb|right|De algemeane [[structuurformule]] van ne [[triglyceride]].]]
 
 '''Vetten''' bestoat grotendeels uut  ([[triglyceride]]n). Dat bunt [[ester (chemie)|esters]] evörmd uut [[glycerol]], nen tri-funktioneel [[alkohol (scheikunde)|alkohol]], en 3 [[vetzuur]]molekulen.  Et soort vet wöd bepoald deur de doarin anweazege vetzuren en de andere al dan neet verzeepboare bestanddelen.
 
