--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -1,4 +1,4 @@
-{{Pervincietabel
+{{Porvincietabel
 | titel          = Pervincie Drenthe
 | vlag           = Flag of Drenthe.svg
 | waopen         = WapenDrenthe.jpg
