Versy 314000 van [[Special:Contributions/2001:1C02:2107:6300:E482:D1D2:7632:77CE|2001:1C02:2107:6300:E482:D1D2:7632:77CE]] ([[User talk:2001:1C02:2107:6300:E482:D1D2:7632:77CE|oaverleg]]) weaderümmedraid

--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -1,4 +1,4 @@
-{{Porvincietabel
+{{Pervincietabel
 | titel          = Pervincie Drenthe
 | vlag           = Flag of Drenthe.svg
 | waopen         = WapenDrenthe.jpg
@@ -159,7 +159,7 @@ Pervinciesecretaoris: Annet van Schreven
 * [http://www.drentsetaol.nl/ Stichting Drentse Taol] (zeei ok: [[Stichting Drentse Taol]])
 
 == Verwiezings ==
-{{Reflist}}
+<references/>
 
 {{Drenthe}}
 {{NederlaandsePrevinsies}}
