--- a/Anne_van_der_Meiden.mw
+++ b/Anne_van_der_Meiden.mw
@@ -1,15 +1,15 @@
 [[Ofbeelding:AnnevanderMeiden14082007.jpg|thumb|250px|Anne van der Meiden]]
 
-'''Anne van der Meiden''' ([[Eanske]], [[4 juni]] [[1929]] - [[Nijverdal]], [[3 juni]] [[2021]]) is nen [[Tweante|Tweantsen]] [[domie]] en [[kommunikasiewetenskop]]per. An de vrogere [[Rieksuniversiteit van Utrecht]] was'e hoogleraar in massakommunikasie en Publieke Relasies. Rechtevoort is'e vuural bekeand van de koarkdeenstn dee at'e in t [[Tweants]] dut, en zinnen [[Tweantsen Biebel]].
+'''Anne van der Meiden''' ([[Eanske]], [[4 juni]] [[1929]] - [[Nijverdal]], [[3 juni]] [[2021]]) was nen [[Tweante|Tweantsen]] [[domie]] en [[kommunikasiewetenskop|kommunikatiewetenskop]]per. An de vrogere [[Rieksuniversiteit van Utrecht]] was he hoogleraar in massakommunikatie en Publieke Relaties. In Tweante was he vuural bekeand van de koarkdeenste wat he in et [[Tweants]] heul, en zinnen [[Tweantsen Biebel]].
 
 ==Achtergroond==
-Hee wör geboorn in n [[protestant|Kristelik-Gerefformeerd]] gezin. Noa t gymnasium in Eanske studeerdn'e [[godgeleardheaid]]. Doarnoa wör'e domie in de protestaantse koarke van [[Meerkerk]]. Doarnöast studeerdn'e marketing en kommunikasiewetenskopn (anpriezen en boskopn oawerbrengn). In [[1972]] promoveerdn'e op ethiek in de propaganda van t [[vakgebeed]] wiesbegearige ethiek. hee hef op verskeaidene hogeskooln oonderwies egeewn, woeroonder ook an [[Monique Sleiderink]]. In [[1994]] gung'e met [[emiroat]].
+Van der Meiden wör geboorn in een [[protestant|Kristelik-Gereformeerd]] gezin. Noa et gymnasium in Eanske studeerdn he [[godgeleardheaid|godgeleardheid]]. Doarnoa wör he domie in de protestaantse koarke van [[Meerkerk]]. Doarnöast studeerdn he marketing en kommunikatiewetenskopn. In [[1972]] promoveerdn he op ethiek in de propaganda van et [[vakgebeed]] wiesbegearige ethiek. hee hef op verskeaidene hogeskooln oonderwies egeewn, woeroonder ook an [[Monique Sleiderink]]. In [[1994]] gung he met [[emiroat]].
 
 ==Godgeleardheaid==
-Hee skreef völle beuke oawer geloof, [[reklame]], [[propaganda]], köjern vuur völle tooheurders en publieke relasies. Ook hef'e verskeaidene strekromans op zinn naamn stoan. Op 23 september [[2007]] was'e te zeen in t [[IKON]]-programma ''Het Vermoeden'', woerin at'e köjerdn van det de koarkn rechtevoort te weainig achet op t woark van n [[Heilige Geest|Heligen Geest]]. 
+Hee skreef völle beuke oawer geloof, [[reklame]], [[propaganda]], köjern vuur völle tooheurders en publieke relaties. Ook hef he verskeaidene strekromans op zinn naam stoan. Op 23 september [[2007]] was he te zeen in et [[IKON]]-programma ''Het Vermoeden'', woerin at he köjerdn van det de koarkn rechtevoort te weainig achet op et woark van 'n [[Heilige Geest|Heligen Geest]]. 
 
 ==Biebelummezetting==
-Van der Meiden hef 52 biebelbeuke umme ezat in t Tweants. Hee hef vennear nog loatn weetn det'e doarmet mut stopn, umdet'e t allemoal nit good mear zeen kan. Ook leaidt'e regelmoatig koarkdeenstn in t Tweants. In 2012 vertaaln hee n Oaldsaksischen heldendoad [[Heliand]].
+Van der Meiden hef 52 biebelbeuke umme ezat in et Tweants. Doar mos he met stopn, umdet he et allemoal nit good mear kon zeen. Ook leiden he regelmoatig koarkdeenstn in et Tweants. In 2012 vertaaln hee 'n Oaldsaksischen heldendoad [[Heliand]].
 
 ==Oetgoande verbeendige==
 *[http://www.annevandermeiden.nl/ www.annevandermeiden.nl webstea van umzelf]
