/* Donar syn visketripken */

--- a/Jörmungandr.mw
+++ b/Jörmungandr.mw
@@ -10,10 +10,10 @@ De name ''Jörmungandr'' kümt uut et [[oldnoorsk]] en besteyt uut twey deylen: 
 Oaver Donar synen untmöting med de Jörmungandr sint dree myten oaverbleaven.
 
 ===De katte upböären===
-In eyn verhaal kümt Donar de röäsenköäning Útgarða-Loki teagen. Donar müt klüskes vöär em doon. Eyne dårvan is ne uutdaging van Donar synen kracht. Útgarða-Loki porket Donar up üm de wearldslange up te böären, den as med magy in ne groute katte veranderd is. Donar gript de katte by den balg by, mär krigt em mär net med eynen poat van de grund. Útgarða-Loki legt wat later uut dat et en gräpken was en dat et Donar al sou wyd lükkeden nen indrukwekkenden dåd was. Hee had de slange håste töt an den heamel upeböärd. Dee wat et saggen warren der bange van wörden. As et em heylemål lükked was, warren de grensen van et heylal verwrüngen.
+In eyn verhaal kümt Donar de röäsenköäning Útgarða-Loki teagen. Den hevt allerhande klüskes vöär Donar. Eyne dårvan is ne uutdaging vöär synen kracht. Útgarða-Loki porket Donar up üm de wearldslange up te böären, den as med magy in ne groute katte veranderd is. Donar gript de katte by den balg by, mär krigt em mär net med eynen poat van de grund. Útgarða-Loki legt wat later uut dat et en gräpken was en dat et Donar al sou wyd lükkeden nen indrukwekkenden dåd was. Hee had de slange håste töt an den heamel upeböärd. Dee wat et saggen warren der bange van wörden. As et em heylemål lükked was, warren de grensen van et heylal verwrüngen.
 
 ===Donar syn visketripken===
-Donar geyt en mål visken med de röäse Hymir. Donar hevt up seaker ougenblik gin aas meyr en vrögt of Hymir em wat wil doon. Niks van an, segt Hymir. Donar wördt hellig en hauwt den kop af van Hymir synen ossen. Donar en Hymir stüürt öären boat up ne steade wåras Hymir vake visken up platviske en al es twey walvisken evöngen had. Donar wil wyder de sey up. Hymir hevt dår weinig dörst up, mär Donar is eygenwys en geyt toch. Donar maket sik ne starke lyne en håken, en prikket der den ossenskop up. Jörmungandr bit to. Donar trekket de slange uut et water en de beiden kummet oug in ouge. Jörmungandr spyt gif en Hymir wördt bleak van bangigheid. Terwyl as Donar synen hamer wil grypen üm Jörmungandr af te hauwen, snid Hymir gauw de lyne döär. De slange sakket weader under water en krunkelt sik rund de wearld.
+Donar geyt en mål hen visken med de röäse Hymir. Donar hevt up seaker ougenblik gin aas meyr en vrögt of Hymir em wat wil doon. Niks van an, segt Hymir. Donar wördt hellig en hauwt den kop af van Hymir synen ossen. Donar en Hymir stüürt öären boat up ne steade wåras Hymir vake visken up platviske en al es twey walvisken evöngen had. Mär Donar wil wyder de sey up. Hymir hevt dår weinig dörst up, mär Donar is eygenwys en geyt toch. Donar maket sik ne starke lyne en håken, en prikket der den ossenskop up. Jörmungandr bit to. Donar trekket de slange uut et water en de beiden kummet oug in ouge. Jörmungandr spyt gif en Hymir wördt bleak van bangigheid. Terwyl as Donar synen hamer wil grypen üm Jörmungandr af te hauwen, snid Hymir gauw de lyne döär. De slange sakket weader under water en krunkelt sik rund de wearld.
 
 Et eddiske gedicht Hymiskviða eandigt ungeväär etselvde. In vrogere skandinaviske vertellingen weat Donar de slange doud te hauwen döär et den kop in te slån.
 
