--- a/Stadspoorte.mw
+++ b/Stadspoorte.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:20040102_Bergen_op_Zoom_Gevangenpoort.jpg|thumb|250px|right|Gevangenenpoorte in [[Bargen op Zoom]]'']]
+[[Ofbeelding:20040102_Bergen_op_Zoom_Gevangenpoort.jpg|thumb|250px|Gevangenenpoorte in [[Bargen op Zoom]]]]
 
 Ne '''stadspoorte''' is nen deurgang in de ([[Vesten|umwalling]]) van ne stad, woar vrögger den toogang wierd ereageld. Ne stadspoorte mit zien [[poortgebouw]] was doarbi-j underdeel van ne [[stadsmure]] of [[stadswal]] en was veural n [[verdaedegingswark]]. Eurspronkelek zol ne stadspoorte ok 's nachts mangsmoal eslotten ewest wean, um ungewenste bezookers buutn de stad te holden.
 
