--- a/Heemenneke.mw
+++ b/Heemenneke.mw
@@ -15,21 +15,22 @@ Nöast et stichtelike van de verhalen zat der ook een vermaak in. De verhalen st
 ==Heemennekes in de beuke==
 Oawer heemennekes is nit völle skrewen, ook nit in de [[Nedersaksische literetuur|Neersassiese skriefkeunsten]]. Et ennigste bekeande verhaal wat de heemennekes angeet keump van [[G.B. Vloedbeld]] in zin book ''[[Mans Kapbaarg]]'', woerin et ene van de heuwdfiguren tiedens een gevecht in et [[Fraankriek|Fraanske]] leager wörd ehulpen duur de heemennekes, umdet hee de heemennekes earder hef ehulpen. De beskriewing:
 
-:''En dow gebeuren der wat vrömds! In ees bleewen de peerden staon oop de stie, woer ze stönnen, zon vieftig tred van oons of en hoo of de dragonners ook domneren, 't hölp eer niks, de knollen steigeren en sprungen, mer kwammen gennen doembreed vuuroet.
+<blockquote style="font-style:italic">
+En dow gebeuren der wat vrömds! In ees bleewen de peerden staon oop de stie, woer ze stönnen, zon vieftig tred van oons of en hoo of de dragonners ook domneren, 't hölp eer niks, de knollen steigeren en sprungen, mer kwammen gennen doembreed vuuroet.
 
-:''"Kaans doew heugte kriegen van zon gekkenspil?" zeg ik tegen Naats.
+"Kaans doew heugte kriegen van zon gekkenspil?" zeg ik tegen Naats.
 
-:''"De heemenkes van 't Oale Begreawen!" griemken Naats. "Zee hoolt de peere nen bentel vuur de peute, kiekt miej mer ees aower de rechter scholder." Ik deu dat en non zag ik dee bentels ook.'' [...]
+"De heemenkes van 't Oale Begreawen!" griemken Naats. "Zee hoolt de peere nen bentel vuur de peute, kiekt miej mer ees aower de rechter scholder." Ik deu dat en non zag ik dee bentels ook.'' [...]
 
-:''"Heuw ees, Jans, zeg Ploogstat, "wat har de Boornse jong toch met de heemenkes?"
+"Heuw ees, Jans, zeg Ploogstat, "wat har de Boornse jong toch met de heemenkes?"
 
-:''"Dat vreug ik ook an Naats en oonderwiel da'w oop Brussel oop an reden, hef hee miej dat oetvoerig vertöllen. Ik zal 't in 't kot nao vertellen. Hee zeg, hee kwam vergangen jaor oop 'n maol te middag met Dieks, wat zienen knecht is, van 't tuffellaand, zee wollen naor 't hoes hen achielen en in de hoge beelten van 't Oale Begreawen daor heuren ze oop ees 'n gerammel met schöttelen en leppelen - de heemenkes wollen net anvallen!
+"Dat vreug ik ook an Naats en oonderwiel da'w oop Brussel oop an reden, hef hee miej dat oetvoerig vertöllen. Ik zal 't in 't kot nao vertellen. Hee zeg, hee kwam vergangen jaor oop 'n maol te middag met Dieks, wat zienen knecht is, van 't tuffellaand, zee wollen naor 't hoes hen achielen en in de hoge beelten van 't Oale Begreawen daor heuren ze oop ees 'n gerammel met schöttelen en leppelen - de heemenkes wollen net anvallen!
 
-:''Doo zeg Dieks: "Boer, lao'w ees drieste hen gaon en vraogen dee heemenkes, of wiej met meugt etten. Ik zin na beniejd, wat ze oopschaft en wiej spoort den löp naor 't hoes oet."
+Doo zeg Dieks: "Boer, lao'w ees drieste hen gaon en vraogen dee heemenkes, of wiej met meugt etten. Ik zin na beniejd, wat ze oopschaft en wiej spoort den löp naor 't hoes oet."
 
-:''Non, dat göng an. De heemenkes zeaden voort: "Smiet oe daal, keerls, en tast too. Doot mer net, of iej in 't hoes zint biej oew moo". En doo hebt ze eer geneugten getten an ne goolne taofel oet goolne teelders. Et mut na lekker hebben wes. Benaamd de knecht den raken em, de kneupe sprungen em antlesten van de bokse, mer doo hee zien gerak har, stön dat rowmoos oop en göng hen zoonder de heemenkes te bedaanken. Dat is em leelk oopbrökken! Seend den tied har e iederbod wat vot; dan ziene tebaksdeuze, dan zienen knief of zien allozie, vaak mos hee der dree kotten dree langen naor zeuken en dan was 't aait: hee zoch zien peerd en zit er oop. Zo geet 't, a'j de heemenkes te nao komt. Mer Naats danken eer vrendlik vuur 't rieklike etten en hee neugen eer zee zollen 't ees 'n maol wier oophalen, ziene duur stön aait vuur eer lös. En hee lea ook nen schillink geld onder zienen teelder.
+Non, dat göng an. De heemenkes zeaden voort: "Smiet oe daal, keerls, en tast too. Doot mer net, of iej in 't hoes zint biej oew moo". En doo hebt ze eer geneugten getten an ne goolne taofel oet goolne teelders. Et mut na lekker hebben wes. Benaamd de knecht den raken em, de kneupe sprungen em antlesten van de bokse, mer doo hee zien gerak har, stön dat rowmoos oop en göng hen zoonder de heemenkes te bedaanken. Dat is em leelk oopbrökken! Seend den tied har e iederbod wat vot; dan ziene tebaksdeuze, dan zienen knief of zien allozie, vaak mos hee der dree kotten dree langen naor zeuken en dan was 't aait: hee zoch zien peerd en zit er oop. Zo geet 't, a'j de heemenkes te nao komt. Mer Naats danken eer vrendlik vuur 't rieklike etten en hee neugen eer zee zollen 't ees 'n maol wier oophalen, ziene duur stön aait vuur eer lös. En hee lea ook nen schillink geld onder zienen teelder.
 
-:''Seend den tied har de Boornse jong ne goo zied met de heemenkes en daor har e mennigmaol gemak van. Den Naats kon tòch a meer as alman en non stönnen dee oonklaoren van heemenkes em ook nog half. Gen woonder dat Napolion biej Waterloo de pan wierum brachen.<ref>G.B. Vloedbeld (1927), ''Mans Kapbaarg. 'n Grootsten leugenbuul van 't Tukkerlaand'' Boorn: Ten Tusscher, blz. 68-70</ref>
+Seend den tied har de Boornse jong ne goo zied met de heemenkes en daor har e mennigmaol gemak van. Den Naats kon tòch a meer as alman en non stönnen dee oonklaoren van heemenkes em ook nog half. Gen woonder dat Napolion biej Waterloo de pan wierum brachen.<ref>G.B. Vloedbeld (1927), ''Mans Kapbaarg. 'n Grootsten leugenbuul van 't Tukkerlaand'' Boorn: Ten Tusscher, blz. 68-70</ref></blockquote>
 
 ==Reffereansies==
 <references/>
