[[:Kategorie:Germaanse Mythologie]] weg-ehaald; [[:Kategorie:Germaanse mythologie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Jörmungandr.mw
+++ b/Jörmungandr.mw
@@ -23,4 +23,4 @@ Donars visketripken was eyne van de geleevdste verhalen in noordske künst. Et s
 In et historiske wark [[Gylfaginning]] van den [[ysland]]sken skryver [[Snorri Sturluson]] steyt dat et begin van [[Ragnarök]] te marken is in de wilde unröste van de sey, döärdat Jörmungandr synen start löslöt en sikselv up et land warpet. Hee krupt med den wulv [[Fenrir]] voordan en spyet de lucht en et water vul med gif, terwyl as Fenrir vüür spyet uut syne ougen en nöäsegaeter en med synen bek wyd lös de aerde en de lucht upvreat. See vereyniget sik med de söäns van Muspell üm de goden up de vlakte van [[Vigrid]] te bestryden. Hyr wördt vöärspeld dat de slange Donar mekander vöär de lätste mål treffet. Donar krigt Jörmungandr doud, mär valt selv nå noch neagen trad doud dale döär et gif van de slange. Donar syn lätste gevecht med de slange steyt, nöäst andere afbealdingen van Ragnarök, up et [[Krüüs van Gosforth]].
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Germaanse Mythologie]]
+[[Kategorie:Germaanse mythologie]]
