/* Foto-uutstalling */ New image.

--- a/Waoterkiep.mw
+++ b/Waoterkiep.mw
@@ -39,6 +39,7 @@ Ofbeelding:Gallinula chloropus_2.jpg
 Ofbeelding:Waterhoennest.JPG
 Ofbeelding:Teichhuhn.jpg
 Ofbeelding:Gallinula chloropus 2 (Marek Szczepanek).jpg
+File:Rörhöna (Gallinula chloropus) - Ystad-2021.jpg
 </gallery>
 
 ==Uutgaonde verwiezingen==
