--- a/Vikings.mw
+++ b/Vikings.mw
@@ -1,10 +1,10 @@
 {{Etelazie}}[[Bestaand:Wikinger.jpg|thumb|300px|Däänske seylüde, skilderd midden twaalvde eywe.]]
 
-De name '''Viking '''(van et [[Ooldnoors|oldnoorsk]]e ''víkingr'') of '''Noormänne '''wördt bruked vöär [[Noormänne|Noordse]] [[Skandinavië|Skandinaviske]] [[verkenner]]s, [[kryger]]s, [[handel]]slüde en [[piraat (zee)|piraten]]. Disse lüde deaden tüsken de [[8e eeuw|8.]] en [[11e eeuw|11. eywe]] groute deylen van [[Europa (continent)|Europa]], [[Asie]] en noordatlantiske eilanden verkennen, plünderen of [[kolonisme|koloniseren]] of der med handelen.<ref>Roesdahl, Else. The Vikings. Penguin, 1998.</ref>
+'''Vikingen''' (van et [[Ooldnoors|oldnoorsk]]e ''víkingr'') of '''Noormänne '''warren [[Skandinavië|skandinaviske]] [[verkenner]]s, [[kryger]]s, [[handel]]slüde en [[piraat (zee)|piraten]]. Disse lüde deaden tüsken de [[8e eeuw|8.]] en [[11e eeuw|11. eywe]] groute deylen van [[Europa (continent)|Europa]], [[Asie]] en noordatlantiske eilanden verkennen, plünderen of [[kolonisme|koloniseren]] of der med handelen.<ref>Roesdahl, Else. The Vikings. Penguin, 1998.</ref>
 
-Disse Noormänne warren under meyr bekend üm öäre [[langboot|langbouten]], wårmed as se sou wyd når et oasten as [[Konstantinopel]] en de [[Wolga]] in [[Rusland]] kömmen, sou wyd når et westen as [[Ysland]], [[Gröönland]] en [[Newfoundland]] en sou wyd når et süden as [[Al-Andalus]] in et hüdige [[Spanje]].<ref>[http://rodin.uca.es:8081/xmlui/bitstream/handle/10498/7881/18385953.pdf?sequence=1 Riosalido, Jesus. ''Los vikingos en Al-Andalus''. 1997. 2010-05-11] (uuttreksel te krygen in et engelsk)</ref> De eywen wårin as see dit deaden ståt te book as de [[Vikingtyd]]. Et hevt groute gevolgen had vöär de geskydenisse van [[Skandinavie]], [[Ierlaand (eilaand)|Yrland]], [[Groot-Brittanje|Groutbrittanje]] en de rest van middeleywsk [[Europa (continent)|Europa]].
+Disse noormänne warren under meyr bekend üm öäre [[langboot|langboten]], wårmed as se sou wyd når et oasten as [[Konstantinopel]] en de [[Wolga]] in [[Rusland]] kümmen, sou wyd når et westen as [[Ysland]], [[Gröönland]] en [[Newfoundland]] en sou wyd når et süden as [[Al-Andalus]] in et hüdige [[Spanje]].<ref>[http://rodin.uca.es:8081/xmlui/bitstream/handle/10498/7881/18385953.pdf?sequence=1 Riosalido, Jesus. ''Los vikingos en Al-Andalus''. 1997. 2010-05-11] (uuttreksel te krygen in et engelsk)</ref> De eywen wårin as see dit deaden ståt te book as de [[Vikingtyd]]. Et hevt groute gevolgen had vöär de geskydenisse van [[Skandinavie]], [[Ierlaand (eilaand)|Yrland]], [[Groot-Brittanje|Groutbrittanje]] en de rest van middeleywsk [[Europa (continent)|Europa]].
 
-De vikingen deaden selv nit töt nauliks skryven. De lüde dee as med öär te maken kreagen wal. Vake kömmen se der nit heyl rousklörig up. Dårümme besteyt der 'n unvulleydig beald van öär. Desundanks geavet archeology en skreavene brunnen uutgebreide beskryvingen. Et verromantiseerde beald van de Vikingen as [[Nobeln Barbaar|nobele barbaren]] untstünd in de [[18e eeuw|18. eywe]]. Dat spröäk vöäle lüde an en wör steyds vaker bruked en uutbreided in de tyd van de [[Vikingupleaving]].<ref>Langer, Johnni. "The origins of the imaginary viking", ''Viking Heritage Magazine,'' Gotland University/Centre for Baltic Studies. Visby (Sweden), n. 4, dez. 2002</ref> Vikingen wörden vanaf et begin van de [[20e eeuw|20. eywe]] vake afbealded as vechtlüstige unbenüllen of unverbeaterlike avontureers. De hüdige bealdvörming is vake slim uutmölken en vikingen wordet vake as karikaturen neadersatted.
+De vikingen deaden selv nit töt nauliks skryven. De lüde dee as med öär te maken kreagen wal. Vake kümmen se der nit heyl rousklörig up. Dårümme besteyt der 'n unvulleydig beald van öär. Desundanks geavet archeology en skreavene brunnen uutgebreide beskryvingen. Et verromantiseerde beald van de Vikingen as [[Nobeln Barbaar|nobele barbaren]] untstünd in de [[18e eeuw|18. eywe]]. Dat spröäk vöäle lüde an en wör steyds vaker bruked en uutbreided in de tyd van de [[Vikingupleaving]].<ref>Langer, Johnni. "The origins of the imaginary viking", ''Viking Heritage Magazine,'' Gotland University/Centre for Baltic Studies. Visby (Sweden), n. 4, dez. 2002</ref> Vikingen wörden vanaf et begin van de [[20e eeuw|20. eywe]] vake afbealded as vechtlüstige unbenüllen of unverbeaterlike avontureers. De hüdige bealdvörming is vake slim uutmölken en vikingen wordet vake as karikaturen neadersatted.
 
 
 == Naamoorsprung ==
@@ -12,13 +12,13 @@ Et [[Ooldnoors|oldnoorsk]]e vrouwelike selvstandige naamwoord ''víking'' düdet
 
 Årtsbisskop [[Adam van Bremen]], den as de Geskydenisse van Årtsbisskoppen van [[Hamburg]]-[[Bremen]] skreav, gebröäk de name ''viking'' üm [[piraat (zee)|seyröyvers]] en skandinaviers med an te düden. Net as in et oldnoorske gebruuk bedoolden hee der gin lüde of ne speciale kultuur med. In [[middelengelsk]]e tekste kümt et woord nit vöär.
 
-Oaver den oorsprung van et woord 'viking' beståt verskeidene denkwyses. Uut undersöök blikt dat et woord stamt van vöär de tyd at de noordwestelike germanen de technik van et skeypsseil under et knee kreagen. In oldfreeske geskrivten steyt et woord andüded med nen palatalen k. Dat segt geleyrden dat et woord al bestünd vöärdat dee palatalisaty vöärköm, düs in de [[5e eeuw|5. eywe]] of noch eyrder. In dat geval düden et woord up de olde skandinaviske afstandsmåte uut de seyvårt: ''vika''. Et kan good weasen dat dårmed de afstand bedoold wör wat eyne ploge roiers af kunde leggen. Et oldnoorske (vrouwelike) ''víking'' (sou as in de segswyse ''fara í víking'') kan sou düded hebben up ne seyreise wårby roiers mekander in plogen afwesselden. As se noch gin seil hadden, stünd ne roierswesseling gelyk an ne lange reise. Nen (manneliken) ''víkingr'' was dan eyne den as medgüng. Sou stünd et woord 'viking' nit medeyne vöär skandinaviske seyvårders, mär is der dat händig an in ekömmen do as se machtiger begünnen te worden. 
+Oaver den oorsprung van et woord 'viking' beståt verskeidene denkwyses. Uut undersöök blikt dat et woord stamt van vöär de tyd at de noordwestelike germanen de technik van et skeypsseil under et knee kreagen. In oldfreeske geskrivten steyt et woord andüded med nen palatalen k. Dat segt geleyrden dat et woord al bestünd vöärdat dee palatalisaty vöärküm, düs in de [[5e eeuw|5. eywe]] of noch eyrder. In dat geval düden et woord up de olde skandinaviske afstandsmåte uut de seyvårt: ''vika''. Et kan good weasen dat dårmed de afstand bedoold wör wat eyne ploge roiers af kunde leggen. Et oldnoorske (vrouwelike) ''víking'' (sou as in de segswyse ''fara í víking'') kan sou düded hebben up ne seyreise wårby roiers mekander in plogen afwesselden. As se noch gin seil hadden, stünd ne roierswesseling gelyk an ne lange reise. Nen (manneliken) ''víkingr'' was dan eyne den as medgüng. Sou stünd et woord 'viking' nit medeyne vöär skandinaviske seyvårders, mär is der dat händig an in ekümmen do as se machtiger begünnen te worden. 
 
-De [[sproakenkeunde|herkomst]] van et woord vöär de afstandsmåte ''vika'' ligt in et oldskandinaviske warkwoord ''víka'' ([[Oldyslandsk]] ''víkja''). Dat beteykenden 
+De [[sproakenkeunde|herkumst]] van et woord vöär de afstandsmåte ''vika'' ligt in et oldskandinaviske warkwoord ''víka'' ([[Oldyslandsk]] ''víkja''). Dat beteykenden 
 'terügge trekken, med et getyde med beweagen, medgeaven, wyken'. Et beskrivt et beald van nen vermöden roier den as upskuvt (wikt) van de roibanke. Nen frisken roier neamt syne steade in en geyt wyder med roien. Dårnöast likt et woord slim up et woord vöär ''weake''. Söäven dage was de wesseltyd van de weakengoden.
 
 Al vanaf 1980 hebbet verskillende undersökers verband elegd tüsken de wöörde ''viking'' en ''vika''. Dårnöäst geavt et noch twey andere verklåringen. 
-# Et woord viking kümt van et vrouwelike ''vik'' wat ''inham'' of ''baai'' bedüdet. Denket ouk an et drentske woord ''wieke'' vöär nen breyden slout. Vikingen solden vanuut baaien handelsskepe anvallen of an land gån. Med öäre lechte skepen kunden se makkelik oaver smalle slöyte våren en wyd van de groute rivyren in heyl Europa kommen.
+# Et woord viking kümt van et vrouwelike ''vik'' wat ''inham'' of ''baai'' bedüdet. Denket ouk an et drentske woord ''wieke'' vöär nen breyden slout. Vikingen solden vanuut baaien handelsskepe anvallen of an land gån. Med öäre lechte skepen kunden se makkelik oaver smalle slöyte våren en wyd van de groute rivyren in heyl Europa kummen.
 # Et woord viking is afleided van de name ''Vík(in)'', de [[Noorweagn|Noorske]] kuste an et [[Skagerrak]]. Vöäle lüde uut disse streake güngen med up röyvtochten, wårdöär de name van et gebeed lykstelled wör an et piratenvolk.
 Teagen disse verklåringen is een antal beswåren in te brengen: alle seyvårders legget altyd in baaien an, nit blouts de Vikingen. Dee güngen selvs jüüst an wal up (skyr)eilanden. So kunden se sik beater teagen landleygers verdeydigen. De tweyde verklåring is ouk problematisk: lüde uut de Víkin-streake wörden in oldnoorske geskrivten altyd ''Víkverir'' (wykverblyvers) enöömd, nooit ''Víkingar'' (wykgånders)'''.''' Ouk is der gin eyne brunne wårin as Vikingen uut Skagerrak nöömt. Wyder kloppet et språkenkündig nit: den manneliken variant ''víkingr'' is hyrmed te verklåren, mär den vrouweliken (''víking'') nit. Mannelike wöörde sint makkelik van vrouwelike af te leiden, mär nooit andersümme.
 
@@ -32,10 +32,10 @@ De meyste kennis oaver Vikingen kümt uut Skandinavie en de strekken wår as de 
 
 Ouk wat der ''nå'' de vikingtyd evünden is, kan belangryk weasen. Dat müt med sorg en verneamstigheid bekekken worden. Nå at Skandinavie oavergüng up et kristendom tüsken den 11. en 12. eyw, wör der meyr in et latynsk en oldnoorsk oaver skreaven. Vöäral in [[Ysland|ysland]]ske vikingkolony begünnen de lüde unmündig te skryven. Völle traditys, volksverhalen en gebruken wörden vöär et eyrst upeteykend in de Yslandske Sagen. Ouk dat wör vanuut kristelik ougpunt dån, wårdöär de betrouwbårheid twyfelachtig löt. Toch sint en antal saken uut dee tyd waerdevul, sou as de groute versameling [[dichtkunst|skaldiske gedichten]] van hovdichters uut den 10. en 11. eyw. Ouk valt der nen houp te seggen oaver oldnoorske names van wonsteades en wo as de domålige [[sociology|lüde med mekander ümme güngen]].
 
-Döär dit tekort an geskrivten en vrogen oavergang up kristendom is der meyr bekend oaver de vikinganvallen in westeuropa as in ousteuropa. De meyste geskrivten kommet uut Ysland, wat ne noorske kolony was. Dårümme is der van sweydske vikingen, behalve van en paar runesteynder, völle minder bekend.
+Döär dit tekort an geskrivten en vrogen oavergang up kristendom is der meyr bekend oaver de vikinganvallen in westeuropa as in ousteuropa. De meyste geskrivten kummet uut Ysland, wat ne noorske kolony was. Dårümme is der van sweydske vikingen, behalve van en paar runesteynder, völle minder bekend.
 
 === Runesteynder ===
-Et Grötste deyl van de runeskrivten uut de vikingtyd kümt uut [[11e eeuw|11.-eywsk]] [[Sweyden]]. Up vöäle runesteynder ståt de names van deylneamers an vikingtochten, sou as up de steynder van Kjula en Turinge. Up disse beide ståt vöäle verwysingen når gevechten in westeuropa. Up andere steynder ståt de names van vechters dee sint ümmekömmen, sou as up de 25 steynder van Ingvar. Dårup wordet lüde herdacht dee sint ümmekömmen by ne minder good verlöäpene tocht når [[Rusland]]. De runesteynder helpet by et begrypen van de heyle vrog-middeleywske noordske samenleaving, nit enkel et vikingdeyl van de inwoaners. <ref>Sawyer, P H: 1997</ref>
+Et Grötste deyl van de runeskrivten uut de vikingtyd kümt uut [[11e eeuw|11.-eywsk]] [[Sweyden]]. Up vöäle runesteynder ståt de names van deylneamers an vikingtochten, sou as up de steynder van Kjula en Turinge. Up disse beide ståt vöäle verwysingen når gevechten in westeuropa. Up andere steynder ståt de names van vechters dee sint ümmekümmen, sou as up de 25 steynder van Ingvar. Dårup wordet lüde herdacht dee sint ümmekümmen by ne minder good verlöäpene tocht når [[Rusland]]. De runesteynder helpet by et begrypen van de heyle vrog-middeleywske noordske samenleaving, nit enkel et vikingdeyl van de inwoaners. <ref>Sawyer, P H: 1997</ref>
 
 Up de runesteynder ståt reisen når byvöärbeald [[Bath, Somerset|Bath]] in [[Engelaand (regio)|Engelaand]],<ref>baþum (Sm101), zeet [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Grieknlaand|Grekenland]],<ref>In the nominative: ''krikiaR'' (G216). In t genitief: ''girkha'' (U922$), ''k--ika'' (U104). In t datief: ''girkium'' (U1087†), ''kirikium'' (SöFv1954;20, U73, U140), ''ki(r)k(i)(u)(m)'' (Ög94$), ''kirkum'' (U136), ''krikium'' (Sö163, U431), ''krikum'' (Ög81A, Ög81B, Sö85, Sö165, Vg178, U201, U518), ''kri(k)um'' (U792), ''krikum'' (Sm46†, U446†), ''krkum'' (U358), ''kr''... (Sö345$A), ''kRkum'' (Sö82). In t akkusatief: ''kriki'' (Sö170). Onzekere naamval ''krik'' (U1016$Q). Grieknlaand keump ook vuur as ''griklanti'' (U112B), ''kriklati'' (U540), ''kriklontr'' (U374$), see [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Khwaresm]],<ref>''Karusm'' (Vs1), zeet [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Jeruzalem|Jerusalem]],<ref>''iaursaliR'' (G216), ''iursala'' (U605†), ''iursalir'' (U136G216, U605, U136), zeet [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Italiën|Italie]] (as Langobardland),<ref>''lakbarþilanti'' (SöFv1954;22), zeet [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Londen]],<ref>''luntunum'' (DR337$B), zeet [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Serkland]] (Et Sarakenenlaand, [[Islam|Moslimgebeed]]),<ref>''serklat'' (G216), ''se(r)kl''... (Sö279), ''sirklanti'' (Sö131), ''sirk:lan:ti'' (Sö179), ''sirk*la(t)...'' (Sö281), ''srklant''- (U785), skalat- (U439), see [http://www.sofi.se/servlet/GetDoc?meta_id=1472 Nordiskt runnamnslexikon PDF]</ref> [[Engelaand (olde könninkriek)|Engeland]],<ref>''eklans'' (Vs18$), ''eklans'' (Sö83†), ''ekla-s'' (Vs5), ''enklans'' (Sö55), ''iklans'' (Sö207), ''iklanþs''
 (U539C), ''ailati'' (Ög104), ''aklati'' (Sö166), ''akla''-- (U616$), ''anklanti'' (U194), ''eg×loti'' (U812), ''eklanti'' (Sö46, Sm27), ''eklati'' (ÖgFv1950;341, Sm5C, Vs9), ''enklanti'' (DR6C), ''haklati'' (Sm101), ''iklanti'' (Vg20), ''iklati'' (Sm77), ''ikla-ti'' (Gs8), ''i...-ti'' (Sm104), ''ok*lanti'' (Vg187), ''oklati'' (Sö160), ''onklanti''
@@ -55,7 +55,7 @@ Der sint verskillende vikinggraven in Sweyden, Noorweagen, Dänemarken, Düütsk
 * Trulben, by Hornbach, in [[Reinlaand-Palatinoat]], [[Duutslaand|Düütskland]]
 
 ==== Boten ====
-[[Bestaand:Vikingeskibsmuseet 12.jpg|thumb|Skaalmodeln van twee soortn langbootn, te bekiekn in t [[Vikingskip Museum in Roskilde]], [[Denmaark|Deanemaarkn]].]]
+[[Bestaand:Vikingeskibsmuseet 12.jpg|thumb|Skaalmodellen van twey soorten langboten, te bekiekn in t [[Vikingskip Museum in Roskilde]], [[Denmaark|Deanemaarkn]].]]
 [[Bestaand:Viking boat.jpg|thumb|Ne vroo 20ste eeuwse teekning van Vikings dee't van boord goat. t Skip en de details in de kleare van de Vikings is nit echt woarheaidsgetrouw]]
 
 De vikingen hadden twey soorten boten: et langskip en de knarr. Et langskip wördt mangs noch ''drakkar'' enöömd, al klopt dit nit. Et was ebouwd vöär wendbårheid en snelheid. As anvüllen up et seil had et rööispanen üm teagen de wind in te våren. Et was bedoold vöär oorlogsvoring en verkenning. De boog was smal en lang en et had nen undepen deepgang, soudat se rap an land kunden en uutladen in undeep water.
