--- a/Nedersaksisch_Z.mw
+++ b/Nedersaksisch_Z.mw
@@ -83,7 +83,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit Z begunt''' oet 't [[Neders
 **''nöaln'' (hooft neet negatief te wean, mer kan ook ''gezellige onzin'' beteekn)
 **''mekkern''
 **''zemmeln''
-**''ansteln'' (met klemtoon op ''an'', ''steln'' met de -e'' van ''pette'')
+**''ansteln'' (met klemtoon op ''an'', ''steln'' met de ''-e'' van ''pette'')
 *[[Urkers]]: ...
 *[[Veluws]]: 
 **''zeuren''
