--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -68,7 +68,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 ** ''moes'' ([[Oldebroek]], [[Wezep]])
 ** ''muus'' ([[Nunspeet]], [[Une]], [[Vaossen]], [[Apeldoorne (stad)|Apeldoorne]])
 ** ''pruum'', ''prume'', ''proeme''
-** ''scheur, ''snee'', ''gleuf''
+** ''scheur'', ''snee'', ''gleuf''
 ** ''flamoes'', ''flamoeze''
 ** ''flors'' ([[Niekark]], [[Bunsjoten]])
 ** ''plasser''
@@ -99,7 +99,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 ***De eerste vaaier sloan veuraal op t neerkommen, ien tieds dat de lèste (kukeln) meer t prozes van t valen omvat, dus van t stoan, tot de reden (bv. strukeln) en t noar beneden goan, mòr t aanroaken van de grond ozw. wordt hier maisttieds nait mit bedould.
 * [[Tweants]]: 
 **''valn'' 
-**''vuur/teegn de vlakte/vloere/groond/t groondhoolt goan
+**''vuur/teegn de vlakte/vloere/groond/t groondhoolt goan''
 **''van de bene goan''
 **''oonderoet goan''
 **''noar dealtn komn''
@@ -318,7 +318,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 *[[Stellingwarfs]]: ''visker''
 *[[Tweants]]:
 **''visker''
-**''angelder'', ''hengelder'', ''angelaar', ~oar'
+**''angelder'', ''hengelder'', ''angelaar'', ''~oar''
 **''visboer'' (verkoper)
 *[[Urkers]]: ...
 *[[Veluws]]: ''visser''
@@ -510,7 +510,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 ** ''volslägen'' ([[Waopenvelde]])
 ** ''groot''
 ** ''ki{{small()|e}}nd of''
-** ''mundig'', mondig'', ''muntig''
+** ''mundig'', ''mondig'', ''muntig''
 
 ==Vos==
 *[[Nederlands]]: ''vos''
